// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-webhook-form Renders \`storage-settings-webhook-form\` with custom form and history 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout row"
    >
      <div
        class="subheading font-weight-bold"
      >
        Webhooks data storage
      </div>
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        max-width="300"
        text="All webhook requests history is kept in logs"
        top="top"
      />
    </div>
    <div
      class="layout mt-2 row"
    >
      <span
        class="c-information-block__subtitle"
      >
        <storage-settings-history-message-stub
          history="1611250000"
        />
      </span>
    </div>
    <c-enabled-duration-field-stub
      help-text="All webhook requests history older than the defined time period will be deleted"
      label="Clear webhooks logs after"
      name="webhook.delete_after"
      value="[object Object]"
    />
    <c-enabled-field
      label="Open auth data in logs"
      name="webhook.log_credentials"
    />
  </div>
</div>
`;

exports[`storage-settings-webhook-form Renders \`storage-settings-webhook-form\` with default form 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout row"
    >
      <div
        class="subheading font-weight-bold"
      >
        Webhooks data storage
      </div>
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        max-width="300"
        text="All webhook requests history is kept in logs"
        top="top"
      />
    </div>
    <!---->
    <c-enabled-duration-field-stub
      help-text="All webhook requests history older than the defined time period will be deleted"
      label="Clear webhooks logs after"
      name="webhook.delete_after"
      value="[object Object]"
    />
    <c-enabled-field
      label="Open auth data in logs"
      name="webhook.log_credentials"
    />
  </div>
</div>
`;
